{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 5,
  "lineage": "e23a2a07-286e-3d51-33e1-dc0b29fcccdb",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0534c8f0e2b07c5ee",
            "domain": "vpc",
            "id": "eipalloc-08923e4ec4e90e8f4",
            "network_interface": "eni-0e2848f35c278b5c5",
            "private_dns": "ip-192-168-118-182.ap-south-1.compute.internal",
            "private_ip": "192.168.118.182",
            "public_dns": "ec2-13-234-71-243.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.71.243",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prd",
              "Name": "prd-eip-001"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a663ad630cbc450d",
            "domain": "vpc",
            "id": "eipalloc-005511a466e5e392b",
            "network_interface": "eni-019cac1c517ac9c6a",
            "private_dns": "ip-192-168-139-26.ap-south-1.compute.internal",
            "private_ip": "192.168.139.26",
            "public_dns": "ec2-3-6-17-45.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.17.45",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prd",
              "Name": "prd-eip-002"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cb425fb649bfee28",
            "domain": "vpc",
            "id": "eipalloc-0941842a7366a06c2",
            "network_interface": "eni-02b206c9bc83f17e2",
            "private_dns": "ip-192-168-164-227.ap-south-1.compute.internal",
            "private_ip": "192.168.164.227",
            "public_dns": "ec2-13-233-249-213.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.249.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prd",
              "Name": "prd-eip-003"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:626668625088:internet-gateway/igw-0bee1845272352e94",
            "id": "igw-0bee1845272352e94",
            "owner_id": "626668625088",
            "tags": {
              "Environment": "prd",
              "Name": "prd-igw"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0941842a7366a06c2",
            "id": "nat-0b880668bc2efe606",
            "network_interface_id": "eni-02b206c9bc83f17e2",
            "private_ip": "192.168.164.227",
            "public_ip": "13.233.249.213",
            "subnet_id": "subnet-0e774754cee89a9f8",
            "tags": {
              "Environment": "prd",
              "Name": "prd-nat-003"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03747e4b220b9523d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-043130cd3b11557f9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03747e4b220b9523d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07a7a6b9320918d981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0d7a218e059f1ddcb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a7a6b9320918d98",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-006a91f43ddc1f4731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0b880668bc2efe606",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-006a91f43ddc1f473",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bee1845272352e94",
            "id": "r-rtb-0e20d58570c8dbae41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e20d58570c8dbae4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03747e4b220b9523d",
            "owner_id": "626668625088",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-043130cd3b11557f9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prd",
              "Name": "prd-routing-table-private-001"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07a7a6b9320918d98",
            "owner_id": "626668625088",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0d7a218e059f1ddcb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prd",
              "Name": "prd-routing-table-private-002"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-006a91f43ddc1f473",
            "owner_id": "626668625088",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b880668bc2efe606",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prd",
              "Name": "prd-routing-table-private-003"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-019c8ffda033b1601",
            "owner_id": "626668625088",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prd",
              "Name": "prd-routing-table-private-dms-001"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03be630cb039b6d8c",
            "owner_id": "626668625088",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prd",
              "Name": "prd-routing-table-private-dms-002"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09b9ac8c65c195112",
            "owner_id": "626668625088",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prd",
              "Name": "prd-routing-table-private-dms-003"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e20d58570c8dbae4",
            "owner_id": "626668625088",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bee1845272352e94",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prd",
              "Name": "prd-routing-table-public"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff97e800782b8e84",
            "route_table_id": "rtb-03747e4b220b9523d",
            "subnet_id": "subnet-0422b553891e7f315"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffc5934291831c51",
            "route_table_id": "rtb-0e20d58570c8dbae4",
            "subnet_id": "subnet-0e774754cee89a9f8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:626668625088:subnet/subnet-0422b553891e7f315",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/20",
            "id": "subnet-0422b553891e7f315",
            "map_public_ip_on_launch": false,
            "owner_id": "626668625088",
            "tags": {
              "Environment": "prd",
              "Name": "prd-private-001",
              "kubernetes.io/cluster/prd": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:626668625088:subnet/subnet-036c5351db28d896b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.16.0/20",
            "id": "subnet-036c5351db28d896b",
            "map_public_ip_on_launch": false,
            "owner_id": "626668625088",
            "tags": {
              "Environment": "prd",
              "Name": "prd-private-002",
              "kubernetes.io/cluster/prd": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:626668625088:subnet/subnet-0ea9f2d743a1c7ab4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.32.0/20",
            "id": "subnet-0ea9f2d743a1c7ab4",
            "map_public_ip_on_launch": false,
            "owner_id": "626668625088",
            "tags": {
              "Environment": "prd",
              "Name": "prd-private-003",
              "kubernetes.io/cluster/prd": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:626668625088:subnet/subnet-0f31ec19e6c378507",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.48.0/20",
            "id": "subnet-0f31ec19e6c378507",
            "map_public_ip_on_launch": false,
            "owner_id": "626668625088",
            "tags": {
              "Environment": "prd",
              "Name": "prd-private-dms-001",
              "kubernetes.io/cluster/prd": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:626668625088:subnet/subnet-054c17cbb99744df1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.80.0/20",
            "id": "subnet-054c17cbb99744df1",
            "map_public_ip_on_launch": false,
            "owner_id": "626668625088",
            "tags": {
              "Environment": "prd",
              "Name": "prd-private-dms-002",
              "kubernetes.io/cluster/prd": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:626668625088:subnet/subnet-038e05bffccab4f3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.96.0/20",
            "id": "subnet-038e05bffccab4f3f",
            "map_public_ip_on_launch": false,
            "owner_id": "626668625088",
            "tags": {
              "Environment": "prd",
              "Name": "prd-private-dms-003",
              "kubernetes.io/cluster/prd": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:626668625088:subnet/subnet-09be7ae30c7e8a426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.112.0/20",
            "id": "subnet-09be7ae30c7e8a426",
            "map_public_ip_on_launch": true,
            "owner_id": "626668625088",
            "tags": {
              "Environment": "prd",
              "Name": "prd-public-001",
              "kubernetes.io/cluster/prd": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:626668625088:subnet/subnet-028e3beaf9a9245d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.128.0/20",
            "id": "subnet-028e3beaf9a9245d5",
            "map_public_ip_on_launch": true,
            "owner_id": "626668625088",
            "tags": {
              "Environment": "prd",
              "Name": "prd-public-002",
              "kubernetes.io/cluster/prd": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:626668625088:subnet/subnet-0e774754cee89a9f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.160.0/20",
            "id": "subnet-0e774754cee89a9f8",
            "map_public_ip_on_launch": true,
            "owner_id": "626668625088",
            "tags": {
              "Environment": "prd",
              "Name": "prd-public-003",
              "kubernetes.io/cluster/prd": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b7fa491184380c1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:626668625088:vpc/vpc-0b7fa491184380c1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0f4d731517212cc88",
            "default_route_table_id": "rtb-008749fd9fde733b2",
            "default_security_group_id": "sg-03ea71ef5d0545611",
            "dhcp_options_id": "dopt-0b0b7c3ded2afdfcf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b7fa491184380c1e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-008749fd9fde733b2",
            "owner_id": "626668625088",
            "tags": {
              "Environment": "prd",
              "Name": "prd-vpc",
              "kubernetes.io/cluster/prd": "shared"
            }
          }
        }
      ]
    }
  ]
}